# mcp-server-azure-architect

./: .editorconfig  .gitignore  .gitleaks.toml  AGENTS.md  AI_GOVERNANCE.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.copilot/: mcp-config.json
.github/: CODEOWNERS  copilot-instructions.md
.github/extensions/alz-gap-check/: extension.mjs
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/atlas/: charter.md  history.md
.squad/agents/burke/: charter.md  history.md
.squad/agents/forge/: charter.md  history.md
.squad/agents/iris/: charter.md  history.md
.squad/agents/lead/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/sage/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/sentinel/: charter.md
.squad/identity/: now.md  wisdom.md
.squad/skills/fastmcp-bootstrap/: SKILL.md
.squad/skills/mcp-runtime-evaluation/: SKILL.md
data/alz-queries/: MANIFEST.md  manifest.json
data/alz-queries/checklist/: 348ef254-c27d-442e-abba-c7571559ab91.kql  54f0d8b1-22a3-4c0d-8ce2-58b9e086c93a.kql
docs/adr/: 0001-runtime-choice.md  README.md
docs/install/: claude-desktop.md  compatibility-matrix.md  copilot-cli.md  cursor.md  vscode-copilot.md
docs/perf/: coldstart-importtime-3.12.txt  coldstart-investigation.md
docs/skills/: catalog.md
mcp_server_azure_architect/: __init__.py  __main__.py  server.py
src/mcp_server_azure_architect/: __init__.py  __main__.py  azure_client.py  server.py
tests/: __init__.py  test_cold_start.py  test_server.py
(+2 files in other folders)
